<resources>
    <string name="app_name">MPGP Chat</string>

    <!--Текст который показывается при регистрации и авторизации-->
    <string name="welcome_text1">Добро пожаловать в MPGP Android client !</string>
    <string name="welcome_text2">Если у Вас ещё нет акаунта, пожалуйста, пройдите процедуру регистрации</string>
    <string name="registration_text1_1">Регистрация не займёт у Вас много времени</string>
    <string name="registration_text1_2">Придумайте логин и пароль. Логин не короче 3-х символов, пароль - не менее 8-ми любых символов</string>
    <string name="registration_text2_1">Почти всё !</string>
    <string name="registration_text2_2">Придумайте себе никнейм (псевдоним). Никнейм - это имя которое будут видеть другие пользователи</string>
    <string name="authorization_text1">Введите логин и пароль</string>
    <string name="authorization_text2">Эти данные Вы указывали при регистрации. Авторизация необходима для продолжения работы с приложением</string>

    <!--регистрация и авторизация-->
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="nickname_hint">Псевдоним</string>
    <string name="email_hint">E-mail</string>
    <string name="continue_button">ПРОДОЛЖИТЬ</string>
    <string name="back_button">НАЗАД</string>
    <string name="reg_button">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="auth_button">АВТОРИЗОВАТЬСЯ</string>
    <string name="ok_button">OK</string>
    <string name="registration_process">Регистрация</string>
    <string name="authorization_process">Авторизация</string>
    <string name="ws_connection_process">Выполняется вход</string>

    <string name="recover_button"><u>уже есть аккаунт?</u></string>
    <string name="link"><u>MPGP Project on GitHub</u></string>

    <!--подключение к сокет серверу-->
    <string name="connection_header">Выберите сервер для подключения</string>

    <!--Текст ошибок-->
    <string name="wtf_error">Произошла непревиденная ошибка</string>
    <string name="invalid_login">Указан некорректный логин</string>
    <string name="invalid_nickname">Указан некорректный никнейм</string>
    <string name="invalid_password">Указан некорректный пароль</string>
    <string name="login_exists">Указанный логин уже существует</string>
    <string name="nickname_exists">Указанный никнейм уже существует</string>
    <string name="bad_token">Что-то пошло не так... Повторите процедуру авторизации</string>
    <string name="client_already_online">Клиент уже подключен!</string>
    <string name="incorrect_pair">Некорректная пара логин/пароль</string>

    <!--Диалоги-->
    <string name="progress_dialog_msg">Пожалуйста, подождите...</string>
    <string name="exit_dialog_title">Выход</string>
    <string name="exit_dialog_msg">Вы действительно хотите выйти?</string>
    <string name="registration_success_title">Огонь!</string>
    <string name="registration_success_msg">Ваша, учетная запись была успешно создана! Перед началом использования приложения необходимо авторизоваться. Нажмите ОК для продолжения </string>


</resources>
