<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone" />

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/LPContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dp_62"
        android:gravity="center"
        android:visibility="visible">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/login_hint"
            android:textSize="@dimen/sp_16" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/password_hint"
            android:visibility="visible"
            android:textSize="@dimen/sp_16" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/continueBtn"
            style="@style/Base.Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_button"
            android:textSize="@dimen/sp_14" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/nickContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dp_62"
        android:gravity="center"
        android:visibility="gone">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/nickname_hint"
            android:textSize="@dimen/sp_16" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/regBtn"
            style="@style/Base.Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_button"
            android:textSize="@dimen/sp_14" />

    </android.support.v7.widget.LinearLayoutCompat>

</LinearLayout>