<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/authContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/dp_36"
        android:visibility="visible">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/login"
            android:layout_above="@id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/login_hint" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/email"
            android:text="test@mail.ru"
            android:layout_above="@id/regBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/email_hint" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/regBtn"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_button" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:id="@+id/error"
            android:layout_below="@id/regBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorRed"
            android:visibility="gone" />

    </RelativeLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/dp_12"
        android:text="@string/link"
        android:textColor="@color/colorPrimaryDark" />

</android.support.v7.widget.LinearLayoutCompat>