<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/actionContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/regBtn"
                style="@style/Base.Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_button"
                android:textSize="@dimen/sp_14" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/authBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_12"
                android:text="@string/recover_button"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/sp_12" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="@dimen/dp_12"
            android:text="@string/link"
            android:textColor="@color/colorPrimaryDark" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>